maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:18: error: not found: value aMurSud
                         if(!aMurSud(x,y)){force(n+1,x,y+1)}}
                             ^ShortestPathMaze:26: error: not enough arguments for method force: (n: Int, x: Int, y: Int)Unit.
Unspecified value parameter y.
  force(X,Y)
       ^